@@ -1,4 +1,5 @@
 v? - ?
+  - Fix Obsolete EventHandlerMixin class, #268
   - new interface for easy customize fps stats, #255
   - particle systems can have a per-instance custom texture, #264
   - fix traceback in test_tmx_hexmap.py with py35, #263
